// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetTimer 1`] = `
NodeList [
  <div
    class="bg-neutral-800 border-solid border-2 rounded-lg border-green-500 m-2.5 p-2.5 relative w-72 sm:w-80"
  >
    <div
      class="font-bold my-1 text-lg text-green-500"
    >
      Daily Challenges
    </div>
    <div
      class="font-bold my-1 text-lg"
    >
      They reset in
    </div>
    <ul
      class="timer-card flex justify-center"
    >
      <li
        class="inline-block mx-2.5"
      >
        <span
          class="font-bold text-5xl"
        >
          23
        </span>
        <div
          class="text-sm"
        >
          hours
        </div>
      </li>
      <li
        class="inline-block mx-2.5"
      >
        <span
          class="font-bold text-5xl"
        >
          59
        </span>
        <div
          class="text-sm"
        >
          minutes
        </div>
      </li>
      <li
        class="inline-block mx-2.5"
      >
        <span
          class="font-bold text-5xl"
        >
          59
        </span>
        <div
          class="text-sm"
        >
          seconds
        </div>
      </li>
    </ul>
    <div
      class="text-sm"
    >
      <div
        class="flex text-left pl-2.5"
      >
        <div
          class="grow"
        >
          Daily Reset:
        </div>
        <div
          class="font-bold pr-1 text-green-500"
        >
          06:00 AM
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`ResetTimer 2`] = `
NodeList [
  <div
    class="bg-neutral-800 border-solid border-2 rounded-lg border-green-500 m-2.5 p-2.5 relative w-72 sm:w-80"
  >
    <div
      class="font-bold my-1 text-lg text-green-500"
    >
      Weekly Challenges
    </div>
    <div
      class="font-bold my-1 text-lg"
    >
      They reset in
    </div>
    <ul
      class="timer-card flex justify-center"
    >
      <li
        class="inline-block mx-2.5"
      >
        <span
          class="font-bold text-4xl"
        >
          06
        </span>
        <div
          class="text-sm"
        >
          days
        </div>
      </li>
      <li
        class="inline-block mx-2.5"
      >
        <span
          class="font-bold text-4xl"
        >
          23
        </span>
        <div
          class="text-sm"
        >
          hrs
        </div>
      </li>
      <li
        class="inline-block mx-2.5"
      >
        <span
          class="font-bold text-4xl"
        >
          59
        </span>
        <div
          class="text-sm"
        >
          min
        </div>
      </li>
      <li
        class="inline-block mx-2.5"
      >
        <span
          class="font-bold text-4xl"
        >
          59
        </span>
        <div
          class="text-sm"
        >
          sec
        </div>
      </li>
    </ul>
    <div
      class="text-sm"
    >
      <div
        class="flex text-left pl-2.5"
      >
        <div
          class="grow"
        >
          Daily Reset:
        </div>
        <div
          class="font-bold pr-1 text-green-500"
        >
          Mon 06:00 AM
        </div>
      </div>
    </div>
  </div>,
]
`;
